--- a/Homepage/Home.component.html
+++ b/Homepage/Home.component.html
@@ -19,7 +19,30 @@
             <!-- logo -->
             <a href="#" class="logo">JD Sport</a>
             <i class='bx bxs-cart-alt' id="cart-icon" data-quantity="0"></i>
-            
+            <!-- Cart -->
+            <div class="cart">
+                <h2 class="cart-title">Your Cart</h2>
+                <!-- content -->
+                <div class="cart-content">
+                    <div class="cart-box">
+                        <img src="../img/product1.jpeg" alt="" class="cart-img">
+                        <div class="detail-box">
+                            <div class="cart-product-title">Product Shirt</div>
+                            <div class="cart-price">$50</div>
+                            <input type="number" name="" id="" value="1" class="cart-quantity">
+                        </div>
+                        <!--Remove items-->
+                        <i class='bx bxs-trash-alt cart-remove' ></i>
+                    </div>
+                </div>
+                <!-- total -->
+                <div class="total">
+                    <div class="total-title">Total</div>
+                    <div class="total-price">$0</div>
+                </div>
+                <button type="button" class="btn-buy">Pay Now</button>
+                <i class='bx bx-x' id="close-cart"></i>
+            </div>
         </div>
     </header>
 </body>
