--- a/src/Homepage/Home.component.css
+++ b/src/Homepage/Home.component.css
@@ -25,7 +25,9 @@ body{
     color: var(--bg-color);
     background-color: var(--container-color);
 }
-
+section{
+    padding: 4rem 0 3rem;
+}
 /* header */
 header{
     position: fixed;
@@ -33,7 +35,7 @@ header{
     left: 0;
     width: 100%;
     background-color: var(--container-color);
-    box-shadow: 0 1px 4px hsla(0, 0, 98%, 0.1);
+    box-shadow: 0 1px 4px hsla(0, 0%, 98%, 0.1);
     z-index: 100;
 }
 .nav{
@@ -80,11 +82,15 @@ header{
     position: fixed;
     top: 0;
     width: 360px;
-    right: 0;
+    right: -100%;
     min-height: 100vh;
     padding: 20px;
     background: var(--container-color);
     box-shadow: -2px 0 4px hsla(0, 4%, 15%, 10%);
+    transition: 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+.cart.active{
+    right: 0;
     transition: 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 .cart-title{
@@ -173,4 +179,67 @@ header{
     font-size: 24px;
     cursor: pointer;
     color: var(--main-color);
+}
+
+/* product-content */
+.section-title{
+    font-size: 1.5rem;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 1.8rem;
+}
+.shop{
+    margin-top: 2rem;
+
+}
+.shop-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, auto));
+    gap: 1.5rem;
+}
+.product-box{
+    position: relative;
+    background: #2d2e37;
+    padding: 10px;
+    border-radius: 5px;
+    transition: 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+.product-box:hover{
+    background: var(--bg-color);
+    border: 1px solid #f0f0f0;
+    box-shadow:  0 8px 32px hsla(0.75, 0.82, 0.165, 1);
+    transition: 0.8as cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+.product-box:hover .product-title,
+.product-box:hover .price{
+    color: #141414;
+}
+.product-img{
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
+    margin-top: 0.5rem;
+}
+.product-title{
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-top: 0.8rem;
+}
+.price{
+    font-weight: 500;
+}
+.add-cart{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    background: var(--text-color);
+    color: var(--bg-color);
+    padding: 10px;
+    font-size: 1.2rem;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.add-cart:hover{
+    background: hsl(249, 32%, 17%);
 }
