--- a/src/Homepage/Home.component.html
+++ b/src/Homepage/Home.component.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JD Sport</title>
+    <link rel="icon" type="image/x-icon" href="../../img/logoicon.png">
 
     <link rel="stylesheet" href="Home.component.css">
 
