Homepage-html-add: tạo footer cho homepage

--- a/src/Homepage/Home.component.html
+++ b/src/Homepage/Home.component.html
@@ -108,6 +108,64 @@
         </div>
     </section>
 
+    <footer class="footer">
+    <div class="container">
+        <div class="footer-content">
+            <div class="footer-logo">
+                <a href="#" class="logo">Shopping with JD</a>
+            </div>
+            <div class="footer-links">
+                <ul>
+                    <li><a href="#">Size Guides</a></li>
+                    <li><a href="#">Exclusions</a></li>
+                    <li><a href="#">Join the conversation</a></li>
+                </ul>
+            </div>
+            <div class="footer-social">
+                <ul>
+                    <li><a href="#" class="bx bxl-facebook"></a></li>
+                    <li><a href="#" class="bx bxl-twitter"></a></li>
+                    <li><a href="#" class="bx bxl-instagram"></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-links">
+            <ul>
+                <li><a href="#">Customer Care</a></li>
+                <li><a href="#">Delivery & Returns</a></li>
+                <li><a href="#">Help</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Track My Order</a></li>
+            </ul>
+        </div>
+        <div class="footer-links">
+            <ul>
+                <li><a href="#">Corporate</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Become An Affiliate</a></li>
+                <li><a href="#">JD Sports Fashion Plc</a></li>
+            </ul>
+        </div>
+        <div class="footer-links">
+            <ul>
+                <li><a href="#">Legal</a></li>
+                <li><a href="#">Terms & Conditions</a></li>
+                <li><a href="#">Privacy & Cookies</a></li>
+                <li><a href="#">Accessibility</a></li>
+                <li><a href="#">Site Map</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="footer-corporate-website">
+        <a href="http://www.jdplc.com" target="_blank">Visit our corporate website at www.jdplc.com</a>
+    </div>
+    <div class="footer-copyright">
+        Copyright © 2023 JD Sports All rights reserved.
+    </div>
+</footer>
+
+
     <!--Link Js-->
     <script src="Home.component.js"></script>
 </body>
