--- a/src/Homepage/Home.component.css
+++ b/src/Homepage/Home.component.css
@@ -243,3 +243,77 @@ header{
 .add-cart:hover{
     background: hsl(249, 32%, 17%);
 }
+
+/* footer */
+.footer {
+    background-color: #2d2e37;
+    color: #fff;
+    padding: 20px 0;
+    font-family: 'Poppins', sans-serif; /* Sử dụng font Poppins cho phần footer */
+}
+
+.footer .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer .footer-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer .footer-logo .logo {
+    font-size: 24px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #fff; 
+}
+
+.footer .footer-links ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer .footer-links ul li {
+    margin-bottom: 10px;
+}
+
+.footer .footer-links ul li a {
+    text-decoration: none;
+    color: #fff; 
+}
+
+.footer .footer-social ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+}
+
+.footer .footer-social ul li {
+    margin-right: 10px;
+}
+
+.footer .footer-social ul li a {
+    font-size: 24px;
+    color: #fff;
+    text-decoration: none;
+}
+
+.footer-corporate-website {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.footer-corporate-website a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 14px; 
+    font-weight: bold; 
+}
+
+.footer-copyright {
+    text-align: center;
+    font-size: 12px;
+    opacity: 0.7; /* Độ mờ của chữ */
+}
